// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDescription /> snapshots should match snapshot 1`] = `
<section
  aria-label="descrição do produto"
  class="styles__Container-sc-ypft3n-0 hhjPNM"
>
  <p
    class="styles__Brand-sc-ypft3n-1 eBdmJx"
  >
    brand mock
  </p>
  <h1
    class="styles__Title-sc-ypft3n-2 kFUCun"
  >
    title mock
  </h1>
  <p
    class="styles__Description-sc-ypft3n-3 jIbbAQ"
  >
    description mock
  </p>
  <div
    class="styles__PriceContainer-sc-ypft3n-4 jUenDh"
  >
    <span
      class="styles__FinalPriceContainer-sc-ypft3n-5 hXifzc"
    >
      <span
        class="styles__FinalPrice-sc-ypft3n-6 cInfIl"
      >
        $
        125.00
      </span>
      <span
        class="styles__Discount-sc-ypft3n-7 cyFKTa"
      >
        50
        %
      </span>
    </span>
    <p
      class="styles__Price-sc-ypft3n-8 gNjCoe"
    >
      $
      250.00
    </p>
  </div>
</section>
`;

exports[`<ProductDescription /> snapshots should match snapshot of product description without discount 1`] = `
<section
  aria-label="descrição do produto"
  class="styles__Container-sc-ypft3n-0 hhjPNM"
>
  <p
    class="styles__Brand-sc-ypft3n-1 eBdmJx"
  >
    brand mock
  </p>
  <h1
    class="styles__Title-sc-ypft3n-2 kFUCun"
  >
    title mock
  </h1>
  <p
    class="styles__Description-sc-ypft3n-3 jIbbAQ"
  >
    description mock
  </p>
  <span
    class="styles__FinalPrice-sc-ypft3n-6 cInfIl"
  >
    $
    250.00
  </span>
</section>
`;
